fixes scrollbar styling on BoardsPage component

--- a/frontend/src/components/BoardsPage/BoardsPage.css
+++ b/frontend/src/components/BoardsPage/BoardsPage.css
@@ -1,3 +1,8 @@
+.boards-page {
+    margin: 25px
+}
+
+
 BoardCard {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
@@ -8,19 +13,40 @@ BoardCard {
     margin: 0 auto;
     
 
-        >   .your-boards {
-            font-family: "Sour Gummy", sans-serif;
-            font-weight: bold;
-            text-align: center;
-            color: white;
-            /* position: fixed; */
-            /* bottom: 30px; */
-            /* left: 50%; */
-            /* transform: translateX(-50%); */
-            text-align: center;
-            background-color: rgba(56, 54, 54, 0.8);
-            padding: 8px 16px;
-            border-radius: 8px;
-            /* box-shadow: 0px 2px 4px rgba(31, 30, 30, 0.5); */
-          }
+}
+
+.your-boards,
+ .shared-with-you {
+    /* font-family: "Sour Gummy", sans-serif;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+    position: fixed;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    background-color: rgba(56, 54, 54, 0.8);
+    padding: 8px 16px;
+    border-radius: 8px;
+    box-shadow: 0px 2px 4px rgba(31, 30, 30, 0.5); */
+
+    width: 96%;
+    margin: 0;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    font-size: 24px;
+    font-family: "Sour Gummy", sans-serif;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+    /* position: fixed; */
+    /* bottom: 30px; */
+    /* left: 50%; */
+    /* transform: translateX(-50%); */
+    text-align: center;
+    background-color: rgba(56, 54, 54, 0.8);
+    padding: 8px 16px;
+    border-radius: 8px;
+    /* box-shadow: 0px 2px 4px rgba(31, 30, 30, 0.5); */
   }
