--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,7 @@
 body {
    margin: 0px;
    box-sizing: border-box;
+   scrollbar-width: thin;
 }
+
+
